# Smart-Events-C2

./: db.sqlite3  main.py  manage.py  pyproject.toml
events/: admin.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_category_options_alter_event_options_and_more.py  0003_event_tipo.py
events/templates/: event_detail.html  events.html  footer.html  home.html  login.html  my_events.html  register.html  sidebar.html
smartevents/: asgi.py  settings.py  urls.py  wsgi.py
